--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body>
+<body class="theme-body">
     <button class="theme-toggle" onclick="toggleTheme()">
         <i class="fas fa-moon dark-icon"></i>
         <i class="fas fa-sun light-icon d-none"></i>
