Agent query: Is the 'Choose File' button text now black in light theme and the theme switching working properly?
Fix: Change "Choose File" button text color to black in light theme

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/60e4f361-59b4-48b4-9eea-43ed14d5dd6d/22968a77-e4b3-46c2-9b02-5ceccc956cba.jpg

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,12 +99,13 @@
 [data-bs-theme="light"] .btn-primary {
     background-color: rgba(var(--bs-purple-rgb), 0.8);
     border-color: var(--bs-purple);
-    color: var(--bs-white);
+    color: var(--bs-dark);
 }
 
 [data-bs-theme="light"] .btn-primary:hover {
     background-color: var(--bs-purple);
     border-color: var(--bs-purple);
+    color: var(--bs-dark);
 }
 
 
